--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <h1>Scottish Munros</h1>
+    <select id="select-region">
+      <option disabled selected></option>
+    </select>
     <div id=mountains></div>
   </body>
 </html>
