--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <h1>Scottish Munros</h1>
+      <h1><span>S</span>cottish <span>M</span>unros</h1>
       <div class="select-a-region">
         <label for="select-region">Select a region: </label>
         <select id="select-region">
